# xmas-neopixels

./: .gitignore  CMakeLists.txt  README.md  animations.txt  neopixel.py  sdkconfig  sdkconfig.old
components/neopixels/: CMakeLists.txt  DigitalRainAnimation.cpp  FireAnimation.cpp  LissajousAnimation.cpp  ParticlesAnimation.cpp  RandomWalkAnimation.cpp  RandomWalkAnimation.hpp  Reel100Animation.cpp  Reel100Animation.hpp  animations.cpp  collections.cpp  collections.hpp  math_utils.cpp  neopixels.cpp  neopixels_app.cpp  neopixels_audio.cpp  neopixels_drv.cpp  random.cpp  value_animation.cpp
components/neopixels/include/: DigitalRainAnimation.hpp  FireAnimation.hpp  LissajousAnimation.hpp  ParticlesAnimation.hpp  RandomWalkAnimation.hpp  animation.hpp  collections.hpp  color.hpp  led_strip.hpp  math_utils.h  math_utils.hpp  neopixel.h  neopixel_app.h  neopixel_audio.h  neopixel_drv.h  neopixels.h  neopixels_drv.h  random.hpp  utils.hpp  value_animation.hpp
components/neopixels/test/: CMakeLists.txt  animation-testing.py  testCollections.cpp  testDigitalRain.cpp  testLissajous.cpp  testParticles.cpp  testRandomWalk.cpp
data/: animation-2spirals.json  animation-lissajous.json  animation-mix.json  animation-spiral.json
main/: CMakeLists.txt  main.c  main.cpp  neopixels.cpp  tcp_server.c  tcp_server.cpp
python/: ParticlesAnimation.json  animations.py  animations.txt  config.json  led-control.py  neopixel.py  send-json.py  test_rwalk_output.py  utils.py  workbench.py
