idf_component_register(SRCS
    neopixels_drv.cpp
    neopixels_app.cpp
    random.cpp
    neopixels_audio.cpp
    animations.cpp
    collections.cpp
    math_utils.cpp
    value_animation.cpp
    RandomWalkAnimation.cpp
    DigitalRainAnimation.cpp
    FireAnimation.cpp
    ParticlesAnimation.cpp
INCLUDE_DIRS "include"
#    REQUIRES ...
)
